--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -375,6 +375,8 @@
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse346.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse347.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Darkhorse348.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse349.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Darkhorse350.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -761,6 +763,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Nexus/Nexus.html">Nexus</a> (2009)
 <li><a href="../AvatarTheLastAirbender/AvatarTheLastAirbender.html">Nickelodeon Avatar: The Last Airbender</a> (2011)
 <li><a href="Darkhorse207.jpg">Nocturnals: Witching Hour</a> (1998)
+<li><a href="Darkhorse350.jpg">Norse Mythology</a> (2020)
 <li><a href="Darkhorse208.jpg">Occultist</a>  (2010)
 <li><a href="Darkhorse209.jpg">Oh My Goddess!</a>  (1995)
 <li><a href="../Oktane/Oktane.html">Oktane</a> (1995)
@@ -858,7 +861,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Starstruck/Starstruck.html">Starstruck</a> (1990)
 <li><a href="Darkhorse295.jpg">Steam Man</a> (2015)
 <li><a href="../Strain/Strain.html">Strain</a> (2013)
-<li><a href="Darkhorse290.jpg">The Strain: Mr. Quinlan - Vampire Hunter</a> (2017)
+<li><a href="Darkhorse290.jpg">Strain: Mr. Quinlan - Vampire Hunter</a> (2017)
 <li><a href="Darkhorse289.jpg">Strain: The Fall</a>   (2014)
 <li><a href="Darkhorse291.jpg">Strain: The Night Eternal</a> (2015)
 <li><a href="Darkhorse292.jpg">Strange Case of Mr. Hyde</a> (2011)
@@ -891,6 +894,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse319.jpg">Terminator: Hunters and Killers      (1992)
 <li><a href="Darkhorse320.jpg">Terminator: One Shot</a> (1991)
 <li><a href="Darkhorse321.jpg">Terminator: Secondary Objectives</a> (1991)
+<li><a href="Darkhorse349.jpg">Terminator: Special  </a> (1998)
 <li><a href="Darkhorse322.jpg">Terminator: The Dark Years</a> (1999)
 <li><a href="Darkhorse323.jpg">Terminator: The Enemy Within</a>   (1992)
 <li><a href="Darkhorse324.jpg">Territory</a> (1999)
