--- a/Eternaut/Eternaut.html
+++ b/Eternaut/Eternaut.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-<img src="Eternaut1.jpg"> <br>
-
+<img src="Eternaut1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -29,7 +28,7 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-El Eternauta is a science fiction comic created by Argentine comic strip writer Héctor Germán Oesterheld with artwork by Francisco Solano López. It was first published in Hora Cero Semanal from 1957 to 1959.
+El Eternauta is a science fiction comic created by Argentine comic strip writer Héctor Germán Oesterheld with artwork by Francisco Solano López. It was first published in Hora Cero Semanal from 1957 to 1959. It was translated to english and brought to the American market in 2015 by <a href="../Fantagraphics/Fantagraphics.html">Fantagraphics</a>.
 </p><p>
 Oesterheld returned to El Eternauta with a remake and a sequel, published in 1969 and 1975, respectively. Both featured a more political script, as Oesterheld was disturbed by political conditions in the nation after military juntas had overthrown elected governments. By the time he published the sequel, he and his daughters had joined the Montoneros leftist guerrilla group. Oesterheld disappeared in 1977, was seen in prisons, and is believed to have been tortured, killed, and "disappeared" in 1979 by the U.S.-backed military dictatorship.
 </p><p>
