--- a/Fantagraphics/Fantagraphics.html
+++ b/Fantagraphics/Fantagraphics.html
@@ -267,6 +267,7 @@ Titles
 <li><a href="Fantagraphics67.jpg">EC Artists</a> (2013)
 <li><a href="../Eightball/Eightball.html">Eightball</a> (1989)
 <li><a href="Fantagraphics68.jpg">Elizabeth Bathory</a> (2002)
+<li><a href="../Eternaut/Eternaut1.jpg">Eternaut</a> (2015)
 <li><a href="Fantagraphics69.jpg">Evil Eye</a> (1998)
 <li><a href="Fantagraphics70.jpg">Exotic Fantasy</a> (1992)
 <li><a href="Fantagraphics71.jpg">Eye of Mongombo</a> (1989)
