--- a/index.html
+++ b/index.html
@@ -24135,6 +24135,13 @@
 </tr>
 
 <tr>
+<td>Derf Backderf</td>
+<td>1959</td>
+<td>Creator</td>
+<td><a href="Derf/Derf.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Descendant</td>
 <td>2015</td>
 <td>Image</td>
@@ -28795,8 +28802,8 @@
 
 <tr>
 <td>Eternaut</td>
-<td>1957</td>
-<td>Creator</td>
+<td>2015</td>
+<td>Fantagraphics</td>
 <td><a href="Eternaut/Eternaut.html">Details</a></td>
 </tr>
 
@@ -55921,6 +55928,13 @@
 <td>1894</td>
 <td>Creator</td>
 <td><a href="NormanRockwell/NormanRockwell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Norse Mythology</td>
+<td>2020</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
