--- a/Eclipse/Eclipse.html
+++ b/Eclipse/Eclipse.html
@@ -301,6 +301,7 @@ Eclipse Titles
 <li><a href="Eclipse43.jpg">Complete Alec</a> (1990)
 <li><a href="Eclipse44.jpg">Complete Pogo Comics</a> (1989)
 <li><a href="Eclipse45.jpg">Contractors</a> (1987)
+<li><a href="Eclipse91.jpg">Coyote: I Am Coyote</a> (1984)
 <li><a href="Eclipse46.jpg">Crossfire</a> (1984)
 <li><a href="Eclipse47.jpg">Crossfire &amp; Rainbow</a> (1986)
 <li><a href="Eclipse48.jpg">Cyber 7</a> (1989)
@@ -349,7 +350,6 @@ Eclipse Titles
 <li><a href="Eclipse88.jpg">Hembeck: The Best of Dateline: @!!?#</a> (1979)
 <li><a href="Eclipse89.jpg">Hobbit</a> (1989)
 <li><a href="Eclipse90.jpg">Hotspur</a> (1987)
-<li><a href="Eclipse91.jpg">I Am Coyote</a> (1984)
 <li><a href="Eclipse92.jpg">I Am Legend</a> (1991)
 <li><a href="Eclipse93.jpg">Illegal Aliens</a> (1992)
 <li><a href="Eclipse94.jpg">Iran-Contra Scandal Trading Cards</a> (1988)
