--- a/EpicIllustrated/EpicIllustrated.html
+++ b/EpicIllustrated/EpicIllustrated.html
@@ -2,15 +2,38 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Epic Illustrated</title>
 </head>
 
 <body>
-<h2>Epic Illustrated</h2>
-<img src="EpicIllustrated1.jpg"> <br>
-Series: 34 issues 1980<br>
-Publisher: Marvel<br>
+<img src="EpicIllustrated1.jpg">
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="EpicIllustrated10.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+34 issues starting in 1980 by Marvel just before starting their imprint Epic.
 <p>
 Epic Illustrated was a comics anthology in magazine format published in the United States by Marvel Comics. Similar to the US-licensed comic book magazine Heavy Metal, it allowed explicit content to be featured, unlike the traditional American comic books of that time bound by the restrictive Comics Code Authority, as well as offering its writers and artists ownership rights and royalties in place of the industry-standard work for hire contracts. The series lasted for 34 issues from Spring 1980–February 1986.
 </p><p>
@@ -22,42 +45,6 @@ Epic Illustrated also included an occasional Marvel Comics protagonist, such as 
 </p><p>
 Writer-penciler John Byrne and inker Terry Austin produced "The Last Galactus Story" as a serial in Epic Illustrated #26–34 (Oct. 1984–Feb. 1986). Nine of a scheduled 10 installments appeared. Each ran six pages, except part eight, which ran 12.
 </p>
-Issues:<ul>
-<li><a href="EpicIllustrated.html">Epic #1</a></li>
-<li><a href="EpicIllustrated2.html">Epic #2</a></li>
-<li><a href="EpicIllustrated3.html">Epic #3</a></li>
-<li><a href="EpicIllustrated4.html">Epic #4</a></li>
-<li><a href="EpicIllustrated5.html">Epic #5</a></li>
-<li><a href="EpicIllustrated6.html">Epic #6</a></li>
-<li><a href="EpicIllustrated7.html">Epic #7</a></li>
-<li><a href="EpicIllustrated8.html">Epic #8</a></li>
-<li><a href="EpicIllustrated9.html">Epic #9</a></li>
-<li><a href="EpicIllustrated10.html">Epic #10</a></li>
-<li><a href="EpicIllustrated11.html">Epic #11</a></li>
-<li><a href="EpicIllustrated12.html">Epic #12</a></li>
-<li><a href="EpicIllustrated13.html">Epic #13</a></li>
-<li><a href="EpicIllustrated14.html">Epic #14</a></li>
-<li><a href="EpicIllustrated15.html">Epic #15</a></li>
-<li><a href="EpicIllustrated16.html">Epic #16</a></li>
-<li><a href="EpicIllustrated17.html">Epic #17</a></li>
-<li><a href="EpicIllustrated18.html">Epic #18</a></li>
-<li><a href="EpicIllustrated19.html">Epic #19</a></li>
-<li><a href="EpicIllustrated20.html">Epic #20</a></li>
-<li><a href="EpicIllustrated21.html">Epic #21</a></li>
-<li><a href="EpicIllustrated22.html">Epic #22</a></li>
-<li><a href="EpicIllustrated23.html">Epic #23</a></li>
-<li><a href="EpicIllustrated24.html">Epic #24</a></li>
-<li><a href="EpicIllustrated25.html">Epic #25</a></li>
-<li><a href="EpicIllustrated26.html">Epic #26</a></li>
-<li><a href="EpicIllustrated27.html">Epic #27</a></li>
-<li><a href="EpicIllustrated28.html">Epic #28</a></li>
-<li><a href="EpicIllustrated29.html">Epic #29</a></li>
-<li><a href="EpicIllustrated30.html">Epic #30</a></li>
-<li><a href="EpicIllustrated31.html">Epic #31</a></li>
-<li><a href="EpicIllustrated32.html">Epic #32</a></li>
-<li><a href="EpicIllustrated33.html">Epic #33</a></li>
-<li><a href="EpicIllustrated34.html">Epic #34</a></li>
-</ul>
 
 </body>
 </html>
