--- a/MarvelGraphicNovel/MarvelGraphicNovel.html
+++ b/MarvelGraphicNovel/MarvelGraphicNovel.html
@@ -131,6 +131,7 @@ Issues:<ul>
 <li><a href="MarvelGraphicNovel050.html">Marvel Graphic Novel #50</a> Wolverine Nick Fury The Scorpio Connection</li>
 <li><a href="MarvelGraphicNovel050b.html">Marvel Graphic Novel #50 b</a> Wolverine Nick Fury The Scorpio Connection (alt cover)</li>
 <li><a href="MarvelGraphicNovel051.html">Marvel Graphic Novel #51</a> The Punisher Intruder</li>
+<li><a href="MarvelGraphicNovel052.jpg">Marvel Graphic Novel #52</a> William Gibson's Neuromancer (1989)</li>
 </ul>
 
 </body>
