--- a/index.html
+++ b/index.html
@@ -1390,7 +1390,7 @@
 <tr>
 <td>A+X</td>
 <td>2012</td>
-<td>Epic</td>
+<td>Marvel</td>
 <td><a href="A+X/AX.html">Details</a></td>
 </tr>
 
@@ -7931,7 +7931,7 @@
 <tr>
 <td>Atomic Age</td>
 <td>1995</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="AtomicAge/AtomicAge.html">Details</a></td>
 </tr>
 
@@ -13265,7 +13265,7 @@
 <tr>
 <td>Blueberry</td>
 <td>1989</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Blueberry/Blueberry.html">Details</a></td>
 </tr>
 
@@ -18056,6 +18056,13 @@
 </tr>
 
 <tr>
+<td>Cholly And Flytrap: New Adventures of Cholly and Flytrap</td>
+<td>1991</td>
+<td>Epic</td>
+<td><a href="ChollyFlytrap/ChollyFlytrap.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Choose Your Own Aspen Adventure</td>
 <td>2017</td>
 <td>Aspen</td>
@@ -20309,7 +20316,14 @@
 <tr>
 <td>Coyote</td>
 <td>1981</td>
-<td>Marvel</td>
+<td>Eclipse</td>
+<td><a href="EclipseMagazine/EclipseMagazine.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coyote</td>
+<td>1983</td>
+<td>Epic</td>
 <td><a href="Coyote/Coyote.html">Details</a></td>
 </tr>
 
@@ -20325,6 +20339,13 @@
 <td>2018</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Coyote: I Am Coyote</a></td>
+<td>1984</td>
+<td>Eclipse</td>
+<td><a href="Eclipse/Eclipse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20372,7 +20393,7 @@
 <tr>
 <td>Crash Ryan</td>
 <td>1984</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="CrashRyan/CrashRyan.html">Details</a></td>
 </tr>
 
@@ -20722,7 +20743,7 @@
 <tr>
 <td>Crimson Dynamo</td>
 <td>2003</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="CrimsonDynamo/CrimsonDynamo.html">Details</a></td>
 </tr>
 
@@ -20780,6 +20801,13 @@
 <td>2014</td>
 <td>Black Mask</td>
 <td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Critical Mass</td>
+<td>1989</td>
+<td>Epic</td>
+<td><a href="Epic/Epic.html">Details</a></td>
 </tr>
 
 <tr>
@@ -28472,7 +28500,7 @@
 </tr>
 
 <tr>
-<td>Epic</td>
+<td>Epic Anthology</td>
 <td>1992</td>
 <td>Epic</td>
 <td><a href="Epic/Epic.html">Details</a></td>
@@ -28495,7 +28523,7 @@
 <tr>
 <td>Epic Lite</td>
 <td>1991</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="EpicLite/EpicLite.html">Details</a></td>
 </tr>
 
@@ -29587,7 +29615,7 @@
 <tr>
 <td>Fafhrd And The Gray Mouser</td>
 <td>1990</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="FafhrdAndTheGrayMouser/FafhrdAndTheGrayMouser.html">Details</a></td>
 </tr>
 
@@ -37830,7 +37858,7 @@
 <tr>
 <td>Havok &amp; Wolverine Meltdown</td>
 <td>1990</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Meltdown/Meltdown.html">Details</a></td>
 </tr>
 
@@ -40166,14 +40194,7 @@
 </tr>
 
 <tr>
-<td><a name="i">I Am Coyote</a></td>
-<td>1984</td>
-<td>Eclipse</td>
-<td><a href="Eclipse/Eclipse.html">Details</a></td>
-</tr>
-
-<tr>
-<td>I Am Legend</a></td>
+<td><a name="i">I Am Legend</a></td>
 <td>1991</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
@@ -41127,7 +41148,7 @@
 <tr>
 <td>Interface</td>
 <td>1989</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Interface/Interface.html">Details</a></td>
 </tr>
 
@@ -42329,6 +42350,13 @@
 </tr>
 
 <tr>
+<td>Jhereg</td>
+<td>1990</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jiggs &amp; Maggie</td>
 <td>1953</td>
 <td>Harvey</td>
@@ -42502,7 +42530,7 @@
 <td>Creator</td>
 <td><a href="JimRugg/JimRugg.html">Details</a></td>
 </tr>
-
+MidnightMen/MidnightMen.html
 <tr>
 <td>Jim Starlin</td>
 <td>1949</td>
@@ -51497,7 +51525,7 @@
 <tr>
 <td>Midnight Men</td>
 <td>1993</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="MidnightMen/MidnightMen.html">Details</a></td>
 </tr>
 
@@ -64039,6 +64067,13 @@
 </tr>
 
 <tr>
+<td>Sam And Max</td>
+<td>1992</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sam And Silo</td>
 <td>1977</td>
 <td>King Features</td>
@@ -66696,10 +66731,24 @@
 </tr>
 
 <tr>
+<td>Silver Surfer</td>
+<td>1988</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Silver Surfer Warlock Resurrection</td>
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="SilversurferWarlock/SilversurferWarlock.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Silver Surfer: Parable</td>
+<td>1988</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -66858,7 +66907,7 @@
 <tr>
 <td>Sisterhood Of Steel</td>
 <td>1984</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="SisterhoodOfSteel/SisterhoodOfSteel.html">Details</a></td>
 </tr>
 
@@ -67355,7 +67404,7 @@
 <tr>
 <td>Sleeze Brothers</td>
 <td>1989</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="SleezeBrothers/SleezeBrothers.html">Details</a></td>
 </tr>
 
@@ -68819,7 +68868,7 @@
 <td>Spyke</td>
 <td>1993</td>
 <td>Epic</td>
-<td><a href="SPyke/Spyke.html">Details</a></td>
+<td><a href="Spyke/Spyke.html">Details</a></td>
 </tr>
 
 <tr>
@@ -70141,7 +70190,7 @@
 <tr>
 <td>Stray Toasters</td>
 <td>1988</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="StrayToasters/StrayToasters.html">Details</a></td>
 </tr>
 
@@ -72920,7 +72969,7 @@
 <tr>
 <td>Timespirits</td>
 <td>1984</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Timespirits/Timespirits.html">Details</a></td>
 </tr>
 
@@ -73177,6 +73226,13 @@
 </tr>
 
 <tr>
+<td>Tomb Of Dracula</td>
+<td>1991</td>
+<td>Epic</td>
+<td><a href="EpicComics/EpicComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tomb Of Dracula Magazine</td>
 <td>1979</td>
 <td>Marvel</td>
@@ -73214,7 +73270,7 @@
 <tr>
 <td>Tomorrow Knights</td>
 <td>1990</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="TomorrowKnights/TomorrowKnights.html">Details</a></td>
 </tr>
 
@@ -73652,7 +73708,7 @@
 <tr>
 <td>Transmutation Of Ike Garuda</td>
 <td>1991</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="TransmutationOfIkeGaruda/TransmutationOfIkeGaruda.html">Details</a></td>
 </tr>
 
@@ -73827,7 +73883,7 @@
 <tr>
 <td>Trouble</td>
 <td>2003</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="Trouble/Trouble.html">Details</a></td>
 </tr>
 
@@ -73855,7 +73911,7 @@
 <tr>
 <td>Trouble With Girls</td>
 <td>1994</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="TroubleWithGirls/TroubleWithGirls.html">Details</a></td>
 </tr>
 
@@ -76879,7 +76935,7 @@
 <tr>
 <td>War Man</td>
 <td>1993</td>
-<td>Marvel</td>
+<td>Epic</td>
 <td><a href="WarMan/WarMan.html">Details</a></td>
 </tr>
 
@@ -78533,6 +78589,13 @@
 <td>1922</td>
 <td>Creator</td>
 <td><a href="BillGaines/BillGaines.html">Details</a></td>
+</tr>
+
+<tr>
+<td>William Gibson's Neuromancer</td>
+<td>1989</td>
+<td>Marvel</td>
+<td><a href="MarvelGraphicNovel/MarvelGraphicNovel.html">Details</a></td>
 </tr>
 
 <tr>
