--- a/Feud/Feud.html
+++ b/Feud/Feud.html
@@ -2,13 +2,31 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Feud</title>
 </head>
 
 <body>
-<h2>Feud</h2>
-<img src="Feud.jpg"> <br>
+<img src="Feud.jpg">
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Feud.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Feud2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Feud3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Feud4.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Writer: Mike Baron<br>
 Illustrator: Mark Nelson<br>
 Series: 4 issues 1993<br>
