--- a/EpicComics/EpicComics.html
+++ b/EpicComics/EpicComics.html
@@ -81,13 +81,13 @@
 <div class="mySlides" style="text-align: center;"><img src="../MarshalLaw/MarshalLaw.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic23.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic24.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../MetropolAD/MetropolAD.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../Moebius/Moebius.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../MetropolAD/MetropolAD1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Moebius/Moebius01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Epic25.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../MarvelGraphicNovel/MarvelGraphicNovel052.jpg" title="Neuromancer"></div>
 <div class="mySlides" style="text-align: center;"><img src="../ChollyFlytrap/ChollyFlytrapNewAdventures.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Olympians/Olympians1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="../OneEpic/OneEpic.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../OneEpic/One1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../OnyxOverlord/OnyxOverlord.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Pinhead/Pinhead1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../Pinhead/PinheadVsML1.jpg"></div>
